--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,15 +5,13 @@ on : [push]
 jobs:
   job1:
     runs-on : ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
-
-      - name: Say Hello
-        run: echo "Hello"
-      
+      - name: Step 1
+        run: echo "Execution job 1"
+  
+  job2:
+    needs: job1
+    runs-on : ubuntu-latest
+    steps:
+      - name: Step 2
+        run: echo "Execution job 2 aprés job1"
